@@ -85,10 +85,17 @@ O(x)
 3^-1 + O(3^3)
 O(x)
 1 + 2*3 + 2*3^2 + 2*3^3 + 2*3^4 + O(3^5)
+1 + 2 + 2^2 + 2^3 + O(2^4)
 18446744073709551627 + 18446744073709551628*18446744073709551629 + O(1844674
 4073709551629^2)
 3074457345618258605 + 15372286728091293024*18446744073709551629 + O(18446744
 073709551629^2)
 2*3^2 + 2*3^3 + O(3^5)
+1 + O(2)
+1 + 2^2 + O(2^3)
+1 + 2 + 2^2 + 2^3 + 2^5 + 2^6 + O(2^7)
+1 + 2 + 2^2 + 2^3 + 2^5 + 2^6 + 2^7 + O(2^8)
+1 + 2^2 + 2^4 + O(2^5)
+1 + 2^2 + 2^4 + 2^5 + O(2^6)
 2 + 5 + 2*5^2 + O(5^3)
-Total time spent: 0
+Total time spent: 4
