@@ -32,9 +32,16 @@ for (i=1,#f,
 )
 }
 gamma(s)
+gamma(t)
 p=2^64+13;
 gamma(3 + O(p^2))
 gamma(-3 + O(p^2))
 lngamma(17+O(3^5))
+gamma(1/5+O(2^2))
+gamma(1/5+O(2^3))
+gamma(123+O(2^7))
+gamma(123+O(2^8))
+gamma(29+O(2^5))
+gamma(29+O(2^6))
 
 I + O(5^3)
