@@ -161,6 +161,7 @@ VBr83- [darwin] remove obsolete linker options that cause crashes [#1623]
   117- ellj(simple t_SER in 'x) much slower than in other variable [#1720]
   118- bnrrootnumber did not support the trivial character in the form [0,..,0]
   119- default(log,1) when logfile is write-protected later lead to SEGV [#1730]
+BA120- 2-adic gamma function: fix accuracy loss
 
   Added
     1- add optional argument to sumdigits to specify the base
